--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  file_picker: ^5.0.1
+  open_file: ^2.1.1
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
