--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   file_picker: ^5.0.1
-  open_file: ^2.1.1
+  # open_file: ^2.1.1
   http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
