--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   file_picker: ^5.0.1
   # open_file: ^2.1.1
   http: ^0.13.4
+  shared_preferences: ^2.0.15
+  email_validator: ^2.1.17
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -81,6 +83,11 @@ flutter:
         - asset: asset/fonts/Padauk-Bold.ttf
         # - asset: asset/fonts/Padauk-Regular.ttf
           style: italic
+          weight: 900
+    - family: Pyidaungsu
+      fonts:
+        - asset: asset/fonts/Pyidaungsu-Regular.ttf
+        - asset: asset/fonts/Pyidaungsu-Bold.ttf
           weight: 900
     # - family: Burmese
     #   fonts:
