--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_application_1">
    <application
-        android:label="MOEE-E-Form"
+        android:label="MOEP-E-Form"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
